Fix pesky link alignment in lists

--- a/style/sass/base/_core.scss
+++ b/style/sass/base/_core.scss
@@ -82,6 +82,10 @@ a {
 		background-color: $link__color;
 		color: white;
 	}
+
+	li & {
+		vertical-align: top;
+	}
 }
 
 strong {
